Splash page is up!

--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Ryan Miranda</title>
   <meta name="description" content="Ryan Miranda">
   <meta name="author" content="Ryan Miranda">
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/site.css" />
 </head>
 <body>
-  <h1>Hello world!</h1>
+    <div id="container">
+        <img src="images/avatar.png"/>
+        <h1><i>code. film. music. food.</i></h1>
+        <div class="links">
+            <ul>
+                <li><a href="https://www.linkedin.com/in/rpmir1"><img src="images/linkedin.png" alt="LinkedIn"/></a></li>
+                <li><a href="https://www.facebook.com/rmiranda1984"><img src="images/facebook.png" alt="Facebook"/></a></li>
+                <li><a href="https://twitter.com/rpmir1984"><img src="images/twitter.png" alt="Twitter"/></a></li>
+                <li><a href="https://medium.com/@rpm1984"><img src="images/medium.png" alt="Medium"/></a></li>    
+                <li><a href="https://github.com/rpm1984"><img src="images/github.png" alt="GitHub"/></a></li>
+                <li><a href="https://stackoverflow.com/users/321946/rpm1984"><img src="images/stackoverflow.png" alt="Stack Overflow"/></a></li>        
+            </ul>
+        </div>
+  </div>
 </body>
 </html>
