--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div id="container">
         <img src="images/avatar.png"/>
-        <h1><i>code. film. music. food.</i></h1>
+        <h1>Ryan Miranda</h1>
+        <img id="avatar" src="images/avatar.jpg"/>
+        <h2><i>programming. film. music. cocktails.</i></h2>
         <div class="links">
             <ul>
                 <li><a href="https://www.linkedin.com/in/rpmir1"><img src="images/linkedin.png" alt="LinkedIn"/></a></li>
