--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="https://www.linkedin.com/in/rpmir1"><img src="images/linkedin.png" alt="LinkedIn"/></a></li>
                 <li><a href="https://www.facebook.com/rmiranda1984"><img src="images/facebook.png" alt="Facebook"/></a></li>
                 <li><a href="https://twitter.com/rpmir1984"><img src="images/twitter.png" alt="Twitter"/></a></li>
-                <li><a href="https://code-maze.com/author/ryan-miranda/"><img src="images/codemaze.png" alt="CodeMaze"/></a></li>    
+                <li><a href="https://code-maze.com/author/ryanmiranda/"><img src="images/codemaze.png" alt="CodeMaze"/></a></li>    
                 <li><a href="https://github.com/rpm1984"><img src="images/github.png" alt="GitHub"/></a></li>
                 <li><a href="https://stackoverflow.com/users/321946/rpm1984"><img src="images/stackoverflow.png" alt="Stack Overflow"/></a></li>        
             </ul>
